--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- My CSS -->
 
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="https://www.vhv.rs/dpng/d/543-5430145_globe-vector-svg-png-icon-free-download-transparent.png">
+    <title>anbiasenggagau</title>
 </head>
 
 <body>
