--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- My CSS -->
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="https://www.vhv.rs/dpng/d/543-5430145_globe-vector-svg-png-icon-free-download-transparent.png">
+    <link rel="icon" type="image/png"
+        href="https://www.vhv.rs/dpng/d/543-5430145_globe-vector-svg-png-icon-free-download-transparent.png">
     <title>anbiasenggagau</title>
 </head>
 
@@ -112,7 +113,7 @@
         </div>
 
         <div id="carouselExampleControls" class="carousel slide text-center" data-ride="carousel" data-pause="hover"
-            data-interval="800">
+            data-interval="1500">
             <div class="carousel-inner ">
                 <div class="carousel-item active">
                     <img class="d-block "
