--- a/index.html
+++ b/index.html
@@ -97,6 +97,23 @@
                         deleniti neque? Iste quisquam commodi vitae.</p>
                 </div>
             </div>
+            <div class="row mt-5">
+                <div class="col-lg-2">
+                    <img id="youtube-profile" src="" alt="Channel's Photo" srcset="" width="100" class="rounded-circle">
+                </div>
+                <div class="col-lg-10 text-left">
+                    <h5 id="channel-name"></h5>
+                    <h6 id="channel-subscribe">Subscribe</h6>
+                    <div class="g-ytsubscribe" data-channelid="UC0kSe4J1ocRO-fD5bFXJPYA" data-layout="default"
+                        data-count="hidden"></div>
+                </div>
+                <div class="row mx-auto">
+                    <div class="col">
+                        <iframe class="" id="youtube-video" src="" title="YouTube video" width="1100" height="500"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
@@ -159,52 +176,82 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <img class="img-fluid" src="portofolio/1.jpg" alt="" srcset="">
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        voluptate totam,
-                        facilis
-                        cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis a
-                        laborum sapiente sint nesciunt.</p>
+                    <div class="card mb-3 pale-blue">
+                        <img class="img-fluid img-top" src="portofolio/1.jpg" alt="" srcset="">
+                        <div class="card-body">
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                voluptate totam,
+                                facilis
+                                cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis
+                                a
+                                laborum sapiente sint nesciunt.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <img class="img-fluid" src="portofolio/2.jpg" alt="" srcset="">
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        voluptate totam,
-                        facilis
-                        cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis a
-                        laborum sapiente sint nesciunt.</p>
+                    <div class="card pale-blue">
+                        <img class="img-fluid img-top" src="portofolio/2.jpg" alt="" srcset="">
+                        <div class="card-body">
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                voluptate totam,
+                                facilis
+                                cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis
+                                a
+                                laborum sapiente sint nesciunt.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <img class="img-fluid" src="portofolio/3.jpg" alt="" width="" srcset="">
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        voluptate totam,
-                        facilis
-                        cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis a
-                        laborum sapiente sint nesciunt.</p>
+                    <div class="card pale-blue">
+                        <img class="img-fluid img-top" src="portofolio/3.jpg" alt="" srcset="">
+                        <div class="card-body">
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                voluptate totam,
+                                facilis
+                                cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis
+                                a
+                                laborum sapiente sint nesciunt.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <img class="img-fluid" src="portofolio/4.jpg" alt="" srcset="">
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        voluptate totam,
-                        facilis
-                        cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis a
-                        laborum sapiente sint nesciunt.</p>
+                    <div class="card pale-blue">
+                        <img class="img-fluid img-top" src="portofolio/4.jpg" alt="" srcset="">
+                        <div class="card-body">
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                voluptate totam,
+                                facilis
+                                cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis
+                                a
+                                laborum sapiente sint nesciunt.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <img class="img-fluid" src="portofolio/5.jpg" alt="" srcset="">
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        voluptate totam,
-                        facilis
-                        cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis a
-                        laborum sapiente sint nesciunt.</p>
+                    <div class="card pale-blue">
+                        <img class="img-fluid img-top" src="portofolio/5.jpg" alt="" srcset="">
+                        <div class="card-body">
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                voluptate totam,
+                                facilis
+                                cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis
+                                a
+                                laborum sapiente sint nesciunt.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <img class="img-fluid" src="portofolio/6.jpg" alt="" width="" srcset="">
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        voluptate totam,
-                        facilis
-                        cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis a
-                        laborum sapiente sint nesciunt.</p>
+                    <div class="card pale-blue">
+                        <img class="img-fluid img-top" src="portofolio/6.jpg" alt="" srcset="">
+                        <div class="card-body">
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                voluptate totam,
+                                facilis
+                                cupiditate vitae dicta nihil ipsam id beatae maxime illo inventore ipsa excepturi omnis
+                                a
+                                laborum sapiente sint nesciunt.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -256,6 +303,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://apis.google.com/js/platform.js"></script>
     <script src="js/script.js"></script>
 </body>
 
