--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <div class="card pale-blue">
+                    <div class="card mb-3 pale-blue">
                         <img class="img-fluid img-top" src="portofolio/2.jpg" alt="" srcset="">
                         <div class="card-body">
                             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <div class="card pale-blue">
+                    <div class="card mb-3 pale-blue">
                         <img class="img-fluid img-top" src="portofolio/3.jpg" alt="" srcset="">
                         <div class="card-body">
                             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <div class="card pale-blue">
+                    <div class="card mb-3 pale-blue">
                         <img class="img-fluid img-top" src="portofolio/4.jpg" alt="" srcset="">
                         <div class="card-body">
                             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <div class="card pale-blue">
+                    <div class="card mb-3 pale-blue">
                         <img class="img-fluid img-top" src="portofolio/5.jpg" alt="" srcset="">
                         <div class="card-body">
                             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 text-center">
-                    <div class="card pale-blue">
+                    <div class="card mb-3 pale-blue">
                         <img class="img-fluid img-top" src="portofolio/6.jpg" alt="" srcset="">
                         <div class="card-body">
                             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
